# tylertoo

./: .cz.toml  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .scaffold-docs.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  NOTICE.md  README.md  clippy.toml  codecov.yml  deny.toml  mkdocs.yml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  dependabot-automerge.yml  docs.yml  mutation-tests.yml  release.yml  security.yml
.serena/: project.yml
benchmarks/layout/: RESULTS.md  bench_layout_reads.py  bench_layout_sql.py  layout_read_results.json  layout_sql_results.json  make_cpz.sql
benchmarks/overview/: .gitignore  EXPORT_NOTES.md  H3C_PROFILE.md  H3_NOTES.md  PROFILE.md  README.md  RESULTS.md  access_results.json  bench_access.py  bench_access_remote.py  bench_duckdb_knobs.py  bench_parallel.py  bench_storage.py  ci_baseline.json  ci_guard.py  duckdb_knobs_results.json  format_access.py  format_duckdb_knobs.py  format_parallel.py  format_remote.py  logging_server.py  make_viewports.py  parallel_reader.py  parallel_reader_results.json  remote_access_results.json  run_all.sh  run_conversion.sh  run_sweep.sh  storage_results.json  viewports.json
context/: ANTIMERIDIAN.md  ARCHITECTURE.md  CARRYOVER.md  CI_TRIAGE.md  GEO_OVERVIEWS_ONEPAGER.md  LAZY_CLIPPING_IMPLEMENTATION_PLAN.md  OVERVIEWS_PLAN.md  OVERVIEWS_SPEC.md  OVERVIEW_TUNING.md  TILE_SIMPLIFY_POSTMORTEM.md
context/adr/: 001-consolidate-streaming-modes.md
context/archive/: CARRYOVER.md  CI_TRIAGE.md  LEGACY_TILES_ARCHITECTURE.md  OVERVIEWS_PLAN.md  README.md  SPIKE_112_DECODE.md
context/archive/bench/: EXPORT_NOTES.md  H3C_PROFILE.md  H3_NOTES.md
context/archive/corpus/: SWEEP_NOTES.md  V1_RESULTS.md
context/archive/plans/: 2026-02-23-streaming-design.md  2026-03-10-integer-coordinate-system.md  2026-03-13-drop-smallest-as-needed.md  2026-04-08-geometry-coalescing-design.md  2026-04-10-zoom-dependent-simplification.md  adaptive-threshold-iteration.md
context/plans/: adaptive-threshold-iteration.md
corpus/: METRICS.md  README.md  SWEEPS.md  SWEEP_NOTES.md  fetch.sh  goldens.sh  manifest.json  optimize.sh  render.py  render.sh  render_ranked.py  verify.sh
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs  profiling.rs
crates/cli/tests/: profiling_integration.rs  tiles_facade.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: BBOX_CONTAINMENT_RESULTS.md  bbox_containment.rs  clipping.rs  coalescing.rs  geometry_store.rs  streaming.rs  tile_ref.rs  tiling.rs
crates/core/src/: accumulator.rs  adaptive.rs  batch_processor.rs  clip.rs  clustering.rs  coalesce.rs  compression.rs  covering.rs  decode.rs  external_sort.rs  feature_drop.rs  fs_probe.rs  gap_density.rs  geometry_store.rs  golden.rs  hierarchical_clip.rs  input.rs  input_set.rs  integration_tests.rs  ioverlay_clip.rs  lazy_clip_pipeline.rs  lib.rs  memory.rs  mlt.rs  mvt.rs  parallel_encoding.rs  pipeline.rs  pmtiles_writer.rs  quality.rs  sampling.rs  simplify.rs  spatial_index.rs  streaming_buffer.rs  streaming_types.rs  sutherland_hodgman.rs  tile.rs  tile_ref.rs  tile_spool.rs  validate.rs  wagyu_clip.rs  (+2 more)
crates/core/src/overview/: assign.rs  check.rs  cluster.rs  coalesce.rs  convert.rs  export.rs  filter.rs  h3agg.rs  hostile.rs  level.rs  mod.rs  pipeline.rs  reader.rs  simplify.rs  stream.rs  writer.rs
crates/core/tests/: adaptive_threshold_integration.rs  auto_max_zoom_integration.rs  coalesce_integration.rs  debug_antarctica.rs  decode_roundtrip.rs  huge_polygon_clip.rs  invalid_geometry_clipping.rs  ioverlay_real_fixtures_test.rs  issue_83_precision_mismatch.rs  large_polygon_regression.rs  lazy_clipping_integration.rs  lazy_clipping_phase1.rs  lazy_clipping_poc.rs  leaf_directory_integration.rs  memory_profiling.rs  overview_property_tests.rs  parallel_io_integration.rs  phase1_refactor.rs  simplification_integration.rs  spike_decode.rs  zoom_by_area_integration.rs
crates/python/: Cargo.toml  README.md  gpq_tiles.pyi  pyproject.toml  stubtest-allowlist.txt  tylertoo.pyi
crates/python/scripts/: gen_reference.py
crates/python/src/: lib.rs
crates/python/tests/: conftest.py  test_convert.py  test_overview.py
demo/: README.md  RESULTS.md  brazil-2025-manifest.txt  brazil-manifest.txt  compare.html
docs/: OVERVIEW_TUNING.md  PROFILING.md  advanced-usage.md  api-reference.md  decode.md  demo.md  getting-started.md  index.md  limitations.md  multi-partition.md  performance.md  remote-reads.md
docs-next/: deferred-topics.md  getting-started.md  overall-structure.md
docs-next/diving-deeper/: bounded-memory.md  remote-and-multi-file.md
docs/blog/: v0.7-launch.md
docs/demo/: viewer.html
docs/diving-deeper/: bounded-memory.md  index.md  overview-file.md  preparing-input.md  remote-and-multi-file.md  tippecanoe.md  tuning-zoom.md
docs/plans/: 2026-03-10-integer-coordinate-system.md  2026-03-11-profiling-infrastructure-design.md  2026-03-13-drop-smallest-as-needed.md  2026-03-14-unified-zoom-by-area.md  2026-03-15-integrate-geometry-store.md  2026-04-08-geometry-coalescing-design.md  streaming-tile-pipeline.md
docs/reference/: cli.md  index.md  python.md  rust.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: footer_json.rs  wkb.rs
scripts/: create_streaming_fixtures.py
tests/fixtures/golden/: README.md
tests/fixtures/realdata/: .gitignore  README.md  adm2_polygons.parquet  tielt-winge-adm4.wkb  wkt-encoded.parquet
