[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/python",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
authors = ["Nissim Lebovits <nlebovits@pm.me>"]
license = "Apache-2.0"
repository = "https://github.com/geoparquet-io/gpq-tiles"
homepage = "https://github.com/geoparquet-io/gpq-tiles"
keywords = ["geoparquet", "pmtiles", "vector-tiles", "mvt", "geospatial"]
categories = ["science", "data-structures", "encoding"]

[workspace.dependencies]
# Internal crates
gpq-tiles-core = { path = "crates/core", version = "0.6.0" }

# Core geospatial dependencies
geoarrow = "0.4"
geoarrow-array = "0.4"
geo-traits = "0.3"
geoparquet = "0.4"
parquet = "55"
arrow-schema = "55"
arrow-array = "55"
arrow-select = "55"
geo = "0.32"
pmtiles = "0.12"
geozero = { version = "0.14", features = ["with-wkb", "with-geo"] }

# Protobuf for MVT encoding
prost = "0.13"
prost-build = "0.13"

# Parallelism and spatial indexing
rayon = "1.10"
rstar = "0.12"
crossbeam-channel = "0.5"
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.29", features = ["extension-module"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"

# Tracing / Profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-chrome = "0.7"

# External sorting
extsort = "0.5"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Memory profiling (actual RSS measurement)
memory-stats = "1.2"

# Note: Install these separately with cargo install:
# - cargo-tarpaulin (coverage)
# - cargo-mutants (mutation testing)
# - cargo-watch (auto-run tests)

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
