[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/python",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.75"
authors = ["Nissim Lebovits <nlebovits@pm.me>"]
license = "Apache-2.0"
repository = "https://github.com/geoparquet-io/tylertoo"
homepage = "https://github.com/geoparquet-io/tylertoo"
keywords = ["geoparquet", "pmtiles", "vector-tiles", "mvt", "geospatial"]
categories = ["science", "data-structures", "encoding"]

[workspace.dependencies]
# Internal crates
tylertoo-core = { path = "crates/core", version = "0.6.0" }

# Core geospatial dependencies
geoarrow = "0.8"
geoarrow-array = "0.8"
geo-traits = "0.3"
geoparquet = "0.8"
parquet = "58"
arrow-schema = "58"
arrow-array = "58"
arrow-select = "58"
arrow-ipc = "58"
arrow-cast = "58"
geo = "0.33"
geozero = { version = "0.14", features = ["with-wkb", "with-geo"] }

# Protobuf for MVT encoding
prost = "0.14"
prost-build = "0.14"

# Parallelism and spatial indexing
rayon = "1.10"
rstar = "0.13"
crossbeam-channel = "0.5"
dashmap = "6"
h3o = { version = "0.10", features = ["geo"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.29", features = ["extension-module"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
log = "0.4"
env_logger = "0.11"
indicatif = "0.18"

# Tracing / Profiling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-chrome = "0.7"

# External sorting
extsort = "0.5"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Memory profiling (actual RSS measurement)
memory-stats = "1.2"

# Property-based testing (dev only)
proptest = "1"

# Note: Install these separately with cargo install:
# - cargo-tarpaulin (coverage)
# - cargo-mutants (mutation testing)
# - cargo-watch (auto-run tests)

# Curated lint gates shared by every crate (each crate opts in with
# `[lints] workspace = true`). CI runs clippy with `-D warnings`, so every
# "warn" below is a hard failure on PRs. The full clippy::pedantic group is
# NOT enabled: current code has ~200 findings dominated by cast lints
# (cast_possible_truncation etc.) that are endemic to tile-coordinate math.
# The subset below is the curated slice that current code passes with zero
# findings — ratchet by adding lints here, not by editing CI.
[workspace.lints.clippy]
# Complexity gate: clippy default threshold (25); zero findings today.
# Tighten via `cognitive-complexity-threshold` in clippy.toml if desired.
cognitive_complexity = "warn"
# Pedantic subset (zero findings on current code)
filter_map_next = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_stack_arrays = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
maybe_infinite_iter = "warn"
mut_mut = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
ref_option_ref = "warn"
string_add_assign = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
zero_sized_map_values = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
