[package]
name = "gpq-tiles"
description = "CLI tool for converting GeoParquet to PMTiles vector tiles"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dhat-heap = ["gpq-tiles-core/dhat-heap", "dhat"]

[[bin]]
name = "gpq-tiles"
path = "src/main.rs"

[dependencies]
gpq-tiles-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
indicatif = { workspace = true }
dhat = { version = "0.3", optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-chrome = { workspace = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
