[package]
name = "tylertoo"
description = "CLI tool for converting GeoParquet to PMTiles vector tiles"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dhat-heap = ["tylertoo-core/dhat-heap", "dhat"]

[[bin]]
name = "tylertoo"
path = "src/main.rs"

[dependencies]
tylertoo-core = { workspace = true, features = ["remote"] }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
fs4 = "0.13"
indicatif = { workspace = true }
serde_json = "1"
tempfile = "3"
dhat = { version = "0.3", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
