[package]
name = "tylertoo"
description = "CLI tool for converting GeoParquet to PMTiles vector tiles"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dhat-heap = ["tylertoo-core/dhat-heap", "dhat"]
# Off by default: compiles the hidden `gen-reference-docs` subcommand (and its
# clap-markdown dependency) out of production builds. CI enables it to
# regenerate docs-next/reference/cli.md and diff-guard the committed copy.
gen-docs = ["dep:clap-markdown"]

[[bin]]
name = "tylertoo"
path = "src/main.rs"

[dependencies]
tylertoo-core = { workspace = true, features = ["remote"] }
clap = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
fs4 = "1.1"
indicatif = { workspace = true }
serde_json = "1"
tempfile = "3"
dhat = { version = "0.3", optional = true }
# Exact pin (not caret): the CI drift-guard regenerates reference/cli.md and
# fails on any byte change, and Cargo.lock is not committed — so a new
# clap-markdown patch with different output would break unrelated PRs. Bump
# deliberately and regenerate. Dependabot proposes the bump.
clap-markdown = { version = "=0.1.5", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
