[package]
name = "gpq-tiles-core"
description = "Core library for converting GeoParquet to PMTiles vector tiles"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dhat-heap = ["dhat"]

[dependencies]
dhat = { version = "0.3", optional = true }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geo-traits = { workspace = true }
geoparquet = { workspace = true }
parquet = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-select = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
prost = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
flate2 = "1"
brotli = "8"
zstd = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { workspace = true }
serde_json = "1"
i_overlay = "7"
tempfile = "3"

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
proptest = { workspace = true }

[[bench]]
name = "clipping"
harness = false

[[bench]]
name = "bbox_containment"
harness = false

[lints]
workspace = true
