[package]
name = "tylertoo-core"
description = "Core library for converting GeoParquet to PMTiles vector tiles"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
dhat-heap = ["dhat"]
# Remote input support: read GeoParquet directly from s3://, https://,
# and gs:// URLs via range requests (issue #210). Off by default to keep
# the pure-local library build dependency-light; the CLI enables it.
remote = [
    "dep:object_store",
    "dep:tokio",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:async-trait",
    "dep:futures-util",
    "dep:url",
    "dep:fs4",
]

[dependencies]
dhat = { version = "0.3", optional = true }
geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geo-traits = { workspace = true }
geoparquet = { workspace = true }
parquet = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
arrow-select = { workspace = true }
arrow-ipc = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
prost = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
flate2 = "1"
brotli = "8"
zstd = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { workspace = true }
serde_json = "1"
i_overlay = "7"
tempfile = "3"
object_store = { version = "0.12", features = ["aws", "gcp", "http"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"], optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
url = { version = "2", optional = true }
bytes = "1"
fs4 = { version = "0.13", optional = true }
glob = "0.3"

# Linux-only: statfs(2) for best-effort tmpfs/ramfs detection of the
# remote-input spill directory (#273). Compiles to a no-op elsewhere.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
proptest = { workspace = true }

[[bench]]
name = "clipping"
harness = false

[[bench]]
name = "bbox_containment"
harness = false

[lints]
workspace = true
