[package]
name = "gpq-tiles-python"
description = "Python bindings for gpq-tiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "gpq_tiles"
crate-type = ["cdylib"]

[dependencies]
gpq-tiles-core = { workspace = true, features = ["remote"] }
pyo3 = { workspace = true }
tempfile = "3"

[lints]
workspace = true
