[package]
name = "tylertoo-python"
description = "Python bindings for tylertoo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "tylertoo"
crate-type = ["cdylib"]

[dependencies]
tylertoo-core = { workspace = true, features = ["remote"] }
pyo3 = { workspace = true }
tempfile = "3"

[lints]
workspace = true
