[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gpq-tiles"
version = "0.5.0"
description = "Fast GeoParquet to PMTiles converter"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nissim Lebovits", email = "nlebovits@pm.me" }
]
keywords = ["geoparquet", "pmtiles", "vector-tiles", "mvt", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/geoparquet-io/gpq-tiles"
Repository = "https://github.com/geoparquet-io/gpq-tiles"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "commitizen"]

[tool.maturin]
# Build using pyo3 bindings
bindings = "pyo3"
# extension-module tells pyo3 to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
# Strip the library for minimum file size
strip = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

# Note: Commitizen config is in root .cz.toml - run `cz bump` from repo root

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may be slow)",
]
