[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gpq-tiles"
version = "0.6.0"
description = "Fast GeoParquet to PMTiles converter"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nissim Lebovits", email = "nlebovits@pm.me" }
]
keywords = ["geoparquet", "pmtiles", "vector-tiles", "mvt", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/geoparquet-io/gpq-tiles"
Repository = "https://github.com/geoparquet-io/gpq-tiles"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "commitizen",
    "mypy>=1.14",
    "vulture>=2.13",
    "xenon>=0.9",
    "pip-audit>=2.7",
]

[tool.maturin]
# Build using pyo3 bindings
bindings = "pyo3"
# extension-module tells pyo3 to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
# Strip the library for minimum file size
strip = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# Strict ruleset (CI gate: `ruff check` must pass clean).
# Ratchet by adding rule groups here — current code passes this set.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific
    "PL",  # pylint
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# The stub mirrors the pyo3 signatures verbatim; `input` is part of the
# public API (renaming it would break keyword callers).
"gpq_tiles.pyi" = ["A002"]
# Tests: magic-value comparisons are the point of golden assertions, and a
# handful of API-surface tests deliberately assert "raises *something*".
"tests/**" = ["PLR2004", "B017", "PT011"]

[tool.mypy]
# mypy >= 1.14 cannot target 3.9 anymore; 3.10 is the oldest it can check.
python_version = "3.10"
# Strict mode, relaxed only for untyped test functions: mypy currently checks
# tests/ exclusively (the shipped code is a Rust extension module typed via
# the gpq_tiles.pyi stub, which `mypy.stubtest` verifies against the built
# module in CI). If pure-Python source is ever added, give it its own
# fully-strict override.
strict = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
files = ["tests"]
warn_unused_ignores = true

[tool.vulture]
paths = ["tests"]
min_confidence = 80
# pytest hooks are invoked by name, not referenced.
ignore_names = ["pytest_configure"]

# Note: Commitizen config is in root .cz.toml - run `cz bump` from repo root

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (may be slow)",
]
